Fixed select login alignment

--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -52,6 +52,10 @@
 .container {
   margin: 0 auto;
   float: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo__container {
